<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vista_Contactos">

    <EditText
        android:id="@+id/txtNombreVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtEdadVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number"
        android:textSize="24sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btGuardarVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonGuardar"
        android:textSize="24sp" />
</LinearLayout>