<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/LogeoCrud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logeo Crud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/BT_Ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BT_Ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogeoCrud"
        app:layout_constraintVertical_bias="0.559" />

    <EditText
        android:id="@+id/TxT_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TxT_Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="Contraseña"
        app:layout_constraintBottom_toTopOf="@+id/BT_Ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <EditText
        android:id="@+id/TxT_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TxT_Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/TxT_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/TxT_Mensaje"
        android:layout_width="66dp"
        android:layout_height="27dp"
        android:layout_marginTop="187dp"
        android:layout_marginBottom="72dp"
        android:text="@string/TxT_Mensaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BT_Ingresar"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>